--- a/footer.html
+++ b/footer.html
@@ -45,7 +45,7 @@
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="linkedin.com/in/mohamed-el-idrissi-1855352b9"><i class="fab fa-linkedin"></i></a>
             </div>
         </div>
     </div>
