--- a/footer.html
+++ b/footer.html
@@ -44,8 +44,8 @@
             <div class="social-links">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="linkedin.com/in/mohamed-el-idrissi-1855352b9"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/mazi_360?igsh=YzljYTk1ODg3Zg=="><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/mohamed-el-idrissi-1855352b9/"><i class="fab fa-linkedin"></i></a>
             </div>
         </div>
     </div>
