--- a/footer.html
+++ b/footer.html
@@ -42,10 +42,10 @@
         <div class="footer-section">
             <h3>تابعنا على</h3>
             <div class="social-links">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.instagram.com/mazi_360?igsh=YzljYTk1ODg3Zg=="><i class="fab fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/mohamed-el-idrissi-1855352b9/"><i class="fab fa-linkedin"></i></a>
+                <a href="#"target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
+                <a href="#"target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com/mazi_360?igsh=YzljYTk1ODg3Zg==" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/mohamed-el-idrissi-1855352b9/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
             </div>
         </div>
     </div>
