--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,7 @@
                 <li>Mohamed EL IDRISSI</li>
                 <li>Oumayma Amdi</li>
                 <li>Oussama EL JABRE</li>
-                <li>Oafae BOUTALLAA</li>
+                <li>Ouafae BOUTALLAA</li>
                 <li>Aya BARAKKI</li>
                 <li>BILAL EL RAGHRAGHI</li>
             </ul>
