Update header.html 3

--- a/header.html
+++ b/header.html
@@ -6,10 +6,10 @@
     <nav>
         <ul>
             <li><a href="index.html" data-translate="home">الرئيسية</a></li>
-            <li><a href="projects.html" data-translate="projects">المشاريع</a></li>
-            <li><a href="gallery.html" data-translate="gallery">المعرض</a></li>
-            <li><a href="designers.html" data-translate="designers">المصممون</a></li>
-            <li><a href="contact.html" data-translate="contact">اتصل بنا</a></li>
+            <li><a href="projects.html" data-translate="Cars">السيارات</a></li>
+            <li><a href="gallery.html" data-translate="Moto">الدرجات النارية</a></li>
+            <li><a href="designers.html" data-translate="Mazi Drivers">سائقوا مازي</a></li>
+            <li><a href="contact.html" data-translate="Services"> خدماتنا</a></li>
             
             <li class="dropdown">
                 <div class="language-switcher">
